C2: MemNode::can_see_stored_value() ignores casts which carry control dependency

XMLWordPrintable

    • b09
    • 13
    • b20
    • x86_64
    • linux
    • Not verified

      ADDITIONAL SYSTEM INFORMATION :
      Linux 4.15.0-45-generic #48-Ubuntu SMP Tue Jan 29 16:28:13 UTC 2019 x86_64 x86_64 x86_64 GNU/Linux

      openjdk version "13-ea" 2019-09-17
      OpenJDK Runtime Environment (build 13-ea+9)
      OpenJDK 64-Bit Server VM (build 13-ea+9, mixed mode, sharing)

      A DESCRIPTION OF THE PROBLEM :
      After upgrading from 13-ea+8 to 13-ea+9 we have a JVM crash when building JOSM using ant and error_prone.
      error_prone has been patched as per https://github.com/google/error-prone/issues/1106#issuecomment-462539676 to make it work with Java 13-ea+8.

      Please add JBS label "josm-found" to this bug report.

      ERROR MESSAGES/STACK TRACES THAT OCCUR :
          [javac] Compiling 1666 source files to /var/lib/jenkins/jobs/Java-EarlyAccess-JOSM/workspace/jdk/JDK13/build
          [javac] warning: [options] bootstrap class path not set in conjunction with -source 8
          [javac] #
          [javac] # A fatal error has been detected by the Java Runtime Environment:
          [javac] #
          [javac] # SIGILL (0x4) at pc=0x00007f55b4df37d6, pid=15865, tid=15869
          [javac] #
          [javac] # JRE version: OpenJDK Runtime Environment (13.0+9) (build 13-ea+9)
          [javac] # Java VM: OpenJDK 64-Bit Server VM (13-ea+9, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
          [javac] # Problematic frame:
          [javac] # J 10152 c2 com.sun.tools.javac.tree.Pretty.visitLiteral(Lcom/sun/tools/javac/tree/JCTree$JCLiteral;)V jdk.compiler@13-ea (282 bytes) @ 0x00007f55b4df37d6 [0x00007f55b4df07a0+0x0000000000003036]
          [javac] #
          [javac] # No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
          [javac] #
          [javac] # An error report file with more information is saved as:
          [javac] # /var/lib/jenkins/jobs/Java-EarlyAccess-JOSM/workspace/jdk/JDK13/hs_err_pid15865.log
          [javac] Compiled method (c2) 26298 8129 4 com.google.errorprone.matchers.method.MethodMatcher$1::matchResult (59 bytes)
          [javac] total in heap [0x00007f55b4aa5410,0x00007f55b4aa5ce0] = 2256
          [javac] relocation [0x00007f55b4aa5588,0x00007f55b4aa55f8] = 112
          [javac] main code [0x00007f55b4aa5600,0x00007f55b4aa59a0] = 928
          [javac] stub code [0x00007f55b4aa59a0,0x00007f55b4aa59e8] = 72
          [javac] oops [0x00007f55b4aa59e8,0x00007f55b4aa59f8] = 16
          [javac] metadata [0x00007f55b4aa59f8,0x00007f55b4aa5a70] = 120
          [javac] scopes data [0x00007f55b4aa5a70,0x00007f55b4aa5b40] = 208
          [javac] scopes pcs [0x00007f55b4aa5b40,0x00007f55b4aa5c40] = 256
          [javac] dependencies [0x00007f55b4aa5c40,0x00007f55b4aa5c50] = 16
          [javac] handler table [0x00007f55b4aa5c50,0x00007f55b4aa5cb0] = 96
          [javac] nul chk table [0x00007f55b4aa5cb0,0x00007f55b4aa5ce0] = 48
          [javac] Compiled method (c2) 26298 6978 4 com.sun.tools.javac.tree.JCTree$JCIdent::accept (9 bytes)
          [javac] total in heap [0x00007f55b46ee210,0x00007f55b46ee688] = 1144
          [javac] relocation [0x00007f55b46ee388,0x00007f55b46ee3b0] = 40
          [javac] main code [0x00007f55b46ee3c0,0x00007f55b46ee520] = 352
          [javac] stub code [0x00007f55b46ee520,0x00007f55b46ee538] = 24
          [javac] oops [0x00007f55b46ee538,0x00007f55b46ee540] = 8
          [javac] metadata [0x00007f55b46ee540,0x00007f55b46ee588] = 72
          [javac] scopes data [0x00007f55b46ee588,0x00007f55b46ee5d8] = 80
          [javac] scopes pcs [0x00007f55b46ee5d8,0x00007f55b46ee638] = 96
          [javac] dependencies [0x00007f55b46ee638,0x00007f55b46ee648] = 16
          [javac] handler table [0x00007f55b46ee648,0x00007f55b46ee678] = 48
          [javac] nul chk table [0x00007f55b46ee678,0x00007f55b46ee688] = 16
          [javac] Could not load hsdis-amd64.so; library not loadable; PrintAssembly is disabled
          [javac] #
          [javac] # If you would like to submit a bug report, please visit:
          [javac] # http://bugreport.java.com/bugreport/crash.jsp
          [javac] #

      REGRESSION : Last worked in version 13

      STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
      svn co https://josm.openstreetmap.de/svn/trunk josm
      cd josm
      ant clean dist

      ACTUAL -
      Build failed, JVM crash

      FREQUENCY : always


            Assignee:
            Vladimir Ivanov
            Reporter:
            Webbug Group
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: