8219902: C2: MemNode::can_see_stored_value() ignores casts which carry control dependency

Reviewed-by: kvn